--- a/Statistics_for_Data_Science/Probabilidade/PosDS_Probabilidade_TeoremaDasProbabilidades.ipynb
+++ b/Statistics_for_Data_Science/Probabilidade/PosDS_Probabilidade_TeoremaDasProbabilidades.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -146,7 +146,7 @@
         "id": "iZTW8uXPRTrL",
         "outputId": "12654697-9128-491e-9a69-f240ec17aaec"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,10 +161,153 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Considere que a probabilidade de uma pessoa viajar é de 10%, a probabilidade dela estar de férias é de 20% e a probabilidade dela viajar durante as férias é de 5%. Qual a probabilidade dessa pessoa estar de férias ou viajar?"
+      ],
+      "metadata": {
+        "id": "-IqXgGVXBwDY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p_V = 0.10\n",
+        "p_F = 0.20\n",
+        "p_V_e_F = 0.05\n",
+        "\n",
+        "p_V_ou_p_F = p_V + p_F - p_V_e_F\n",
+        "p_V_ou_p_F"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LLEv6jrnCBEy",
+        "outputId": "eec70241-62cd-4891-903d-e825c0b126e8"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.25000000000000006"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Para calcular a probabilidade de uma pessoa estar de férias ou viajar, podemos usar a fórmula da probabilidade da união de dois eventos:\n",
+        "\n",
+        "𝑃\n",
+        "(\n",
+        "𝐴\n",
+        "∪\n",
+        "𝐵\n",
+        ")\n",
+        "=\n",
+        "𝑃\n",
+        "(\n",
+        "𝐴\n",
+        ")\n",
+        "+\n",
+        "𝑃\n",
+        "(\n",
+        "𝐵\n",
+        ")\n",
+        "−\n",
+        "𝑃\n",
+        "(\n",
+        "𝐴\n",
+        "∩\n",
+        "𝐵\n",
+        ")\n",
+        "P(A∪B)=P(A)+P(B)−P(A∩B)\n",
+        "\n",
+        "Onde:\n",
+        "\n",
+        "𝑃\n",
+        "(\n",
+        "𝐴\n",
+        ")\n",
+        "P(A) é a probabilidade de a pessoa estar de férias (20% ou 0,2).\n",
+        "𝑃\n",
+        "(\n",
+        "𝐵\n",
+        ")\n",
+        "P(B) é a probabilidade de a pessoa viajar (10% ou 0,1).\n",
+        "𝑃\n",
+        "(\n",
+        "𝐴\n",
+        "∩\n",
+        "𝐵\n",
+        ")\n",
+        "P(A∩B) é a probabilidade de a pessoa viajar durante as férias (5% ou 0,05).\n",
+        "Substituindo os valores na fórmula:\n",
+        "\n",
+        "𝑃\n",
+        "(\n",
+        "𝐴\n",
+        "∪\n",
+        "𝐵\n",
+        ")\n",
+        "=\n",
+        "0\n",
+        ",\n",
+        "2\n",
+        "+\n",
+        "0\n",
+        ",\n",
+        "1\n",
+        "−\n",
+        "0\n",
+        ",\n",
+        "05\n",
+        "P(A∪B)=0,2+0,1−0,05\n",
+        "\n",
+        "Calculando:\n",
+        "\n",
+        "𝑃\n",
+        "(\n",
+        "𝐴\n",
+        "∪\n",
+        "𝐵\n",
+        ")\n",
+        "=\n",
+        "0\n",
+        ",\n",
+        "2\n",
+        "+\n",
+        "0\n",
+        ",\n",
+        "1\n",
+        "−\n",
+        "0\n",
+        ",\n",
+        "05\n",
+        "=\n",
+        "0\n",
+        ",\n",
+        "25\n",
+        "P(A∪B)=0,2+0,1−0,05=0,25\n",
+        "\n",
+        "Portanto, a probabilidade de essa pessoa estar de férias ou viajar é de 25%."
+      ],
+      "metadata": {
+        "id": "UuBotncbCJf3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "CYp_-lH1Umws"
+        "id": "r0cygPaCCKZ3"
       },
       "execution_count": null,
       "outputs": []
